[project]
name = "mtcli-pivot"
version = "0.1.0"
description = "Plugin mtcli do indicador pivot point"
readme = "README.md"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
keywords = ["CLI", "trading", "mt5", "pivot point", "ponto pivô"]
packages = [{include = "mtcli_pivot"}]
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1,<2.0.0)",
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-pivot"
repository = "https://github.com/vfranca/mtcli-pivot"
documentation = "https://vfranca.github.io/mtcli-pivot"
issues = "https://github.com/vfranca/mtcli-pivot/issues"

[project.entry-points."mtcli.plugins"]
pivot = "mtcli_pivot.pivot:pivot"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
